Bug 1555098: Fall back to non-double buffering when double buffering swap chain creation fails in CompositorD3D11, the way we do in advanced layers. r=jrmuizel

Differential Revision: https://phabricator.services.mozilla.com/D33745

--HG--
extra : rebase_source : 02000eeb042542b6e1c4900ceefca69ee6d8eabc